app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";

// KIOSK COLORS
$white: #fff;
$black: #000;
$gray1: #f2f2f2;
$gray2: #e6e6e6;
$gray3: #d1cfcd;
$gray4: #a49f9b;
$gray5: #7d7874;
$gray6: #45413d;
$red: #f34c51;
$blue: #00b8d0;
$green: #03763a;
$yellow: #fdd73e;

$kioskfonts: "Avenir Next", "Helvetica Neue", Helvetica, sans-serif;

// bower:scss
@import "bootstrap-only-sass/stylesheets/_bootstrap.scss";
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

* {
  font-family: 'Avenir Next', Helvetica, sans-serif;
}

/*
  Allow angular.js to be loaded in body, hiding cloaked elements until
  templates compile.  The !important is important given that there may be
  other selectors that are more specific or come later and might alter display.
 */
[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}

footer.footer{
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 60px;
  background-color: #f5f5f5;
}
.navbar-brand {
  height: 50px;
  margin: 0;
  padding: 3px 0 0 3px;
  line-height: 50px;
  color: black;
  img {
    // height: 47px;
    display: inline-block;
    height: 37px;
    vertical-align: middle;
  }
}

.navbar {
  height:60px;
  margin-bottom:10px;
  a{
    color: black;
  }
  i {
    font-size: 3em;
  }
  .navbar-icon {
    padding-bottom: 0;
    padding-top: 5px;
  }
  .navbar-nav > li > .dropdown-menu{
    padding: 15px;
    box-sizing: content-box;
  }
}
.btn-link{
  color: $black;
}

.debug {
  visibility: hidden;
  display: none;
}
html, body{
  height:100%
}
.landing-iamge{
  background-image: url('/images/Splash-Default-Boston.jpeg');
  background-size: cover;
  background-position: center, center;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height:60%;
  min-height: 240px;
  z-index:-9999;
}

.landing-plan{
  height:60%;
  width:100%;
  min-height:240px;
  display:flex;
  justify-content:center;
}
.landing-plan-centered{
  width:100%;
  align-self:center;
}
.landing-plan-content{
  background-color: rgba(255, 255, 255, .7);
  border-radius: 10px;
  padding:10px 20px 40px 30px;
}
.landing-splash-middle{
  width:100%;
}
.landing-splash-footer{
  position:absolute;
  bottom:0px;
  left:0px;
  width:100%;
}

#splash-search-form select {
  width: initial;
}
#splash-search-form{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: stretch;
}
#splash-search-form .block-one{
  display:flex;
  flex: 10 1 500px;
  flex-wrap: wrap;
  flex-direction:row;
}
#splash-search-form .block-two{
  display:flex;
  flex: 1 1 510px;
  flex-wrap: wrap;
  flex-direction:row;
  justify-content: space-between;
}
#splash-search-form .block-one > *{
  flex: 1 1 251px;
}
#splash-search-form .block-two > select{
  flex: 1 1 190px;
}
#splash-search-form .block-two > datetimepicker{
  flex: 1 1 290px;
}
#splash-search-form .block-two > button{
  flex: 0 0 auto;
}
#main-template-container{
  height: calc(100% - 70px);
}


.ride_itineraries{
  margin:5px 0px;
}
.ride_itineraries > .bordered{
  border:1px solid gray;
  corder-radius:3px;
  padding:3px;
}

